# wacc

./: Cargo.toml  Makefile
.cargo/: config.toml
doc/: ir-typing.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: typeck.rs
js/: run.js
src/: analysis.rs  ast.rs  cli.rs  codegen.rs  cursor.rs  errors.rs  ir.rs  lexer.rs  lib.rs  lower.rs  main.rs  parse.rs  parser.rs  position.rs  runner.rs  source.rs  token.rs  ui.rs  util.rs  wasm.rs
src/analysis/: class_resolver.rs  error.rs  typeck.rs  typectx.rs  validate.rs
src/ast/: dump.rs  ty.rs  visit.rs
src/codegen/: builtin.rs  ctx.rs  funcs.rs  passes.rs  string_collector.rs  string_ops.rs  visitor.rs  wat.rs
src/ir/: bb.rs  func.rs  instr.rs  mem.rs  ty.rs  util.rs  value.rs
src/lower/: bindings.rs  builtin_gen.rs  class.rs  expr.rs  func.rs  method_gen.rs  ssa.rs  ty.rs
src/parse/: cursor.rs  lexer.rs  parser.rs  token.rs
src/runner/: config.rs  dump.rs  errors.rs  passes.rs
tests/: codegen.rs  common.rs  parser.rs  typeck.rs
tests/codegen/: arith.cl  arith.stdout  case.cl  case.stdout  default_init.cl  default_init.stdout  eq.cl  eq.stdout  inheritance.cl  inheritance.stdout  isvoid.cl  isvoid.stdout  lexical_scope.cl  print_int.cl  print_string.cl  run-test.js  string_ops.cl  string_ops.stdout
tests/parser/: Makefile  fail_empty.coolc-parse  pass_arith.cl  pass_arith.coolc-parse  pass_fields.cl  pass_fields.coolc-parse  pass_multi_class.cl  pass_multi_class.coolc-parse  pass_priority_arith.cl  pass_priority_arith.coolc-parse  pass_priority_assign.cl  pass_priority_assign.coolc-parse  pass_simple_class.cl  pass_simple_class.coolc-parse
tests/snapshots/: parser__fail_empty.snap  parser__pass_arith.snap  parser__pass_fields.snap  parser__pass_multi_class.snap  parser__pass_priority_arith.snap  parser__pass_priority_assign.snap  parser__pass_simple_class.snap  typeck__fail_covariant_return_tys-ast.snap  typeck__fail_covariant_return_tys-diagnostics.snap  typeck__fail_cyclic_inheritance-ast.snap  typeck__fail_cyclic_inheritance-diagnostics.snap  typeck__fail_double_class-ast.snap  typeck__fail_double_class-diagnostics.snap  typeck__fail_field_init_referring_to_uninit-ast.snap  typeck__fail_field_init_referring_to_uninit-diagnostics.snap  typeck__fail_field_override-ast.snap  typeck__fail_field_override-diagnostics.snap  typeck__fail_inherit_non_existent-ast.snap  typeck__fail_inherit_non_existent-diagnostics.snap  typeck__fail_invalid_override_signature-ast.snap  typeck__fail_invalid_override_signature-diagnostics.snap  typeck__fail_main_method_inherited-ast.snap  typeck__fail_main_method_inherited-diagnostics.snap  typeck__fail_main_method_wrong_signature-ast.snap  typeck__fail_main_method_wrong_signature-diagnostics.snap  typeck__fail_no_main_class-ast.snap  typeck__fail_no_main_class-diagnostics.snap  typeck__fail_no_main_method-ast.snap  typeck__fail_no_main_method-diagnostics.snap  typeck__fail_self_field-ast.snap  typeck__fail_self_field-diagnostics.snap  typeck__pass_coexisting_field_method_names-ast.snap  typeck__pass_lexical_scope-ast.snap  (+10 more)
web/: package-lock.json  package.json  webpack.config.js
www/: index.html  styles.css
(+37 files in other folders)
