[package]
name = "wacc"
version = "0.1.0"
edition = "2021"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
itertools = "0.10"
once_cell = "1.15"
clap = { version = "4.0", features = ["derive", "cargo"] }
color-eyre = "0.6"
slotmap = "1.0"
elsa = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
byte_string = "1.0"
take_mut = "0.2"
indexmap = "1.9"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
wast = "50.0.0"
paste = "1.0.9"
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }
process_control = "4.0.1"

[dev-dependencies]
command-fds = "0.2.2"
insta = { version = "1.26.0", features = ["ron"] }
nix = { version = "0.26.2", default-features = false, features = ["fs"] }
pretty_assertions = "1.3.0"
