[package]
name = "wacc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phf = { version = "0.11", features = ["macros"] }
itertools = "0.10"
once_cell = "1.15"
clap = { version = "4.0", features = ["derive", "cargo"] }
color-eyre = "0.6"
slotmap = "1.0"
elsa = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
byte_string = "1.0"
take_mut = "0.2"
indexmap = "1.9"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
wast = "50.0.0"
paste = "1.0.9"
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.63" }
console_error_panic_hook = { version = "0.1.6" }

[dev-dependencies]
futures-lite = "1.12.0"
insta = { version = "1.26.0", features = ["ron"] }
pretty_assertions = "1.3.0"
v8 = "0.61.0"
