[package]
name = "wacc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phf = { version = "0.11", features = ["macros"] }
itertools = "0.10"
once_cell = "1.17"
clap = { version = "4.1", features = ["derive", "cargo"] }
elsa = "1.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
byte_string = "1.0"
take_mut = "0.2"
indexmap = "1.9"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
# wast = "55.0.0"
wast = { git = "https://github.com/slowlime/wasm-tools", branch = "gc-cast-encoding" }
paste = "1.0.12"
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }
typed-arena = "2.0.2"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.84" }
console_error_panic_hook = { version = "0.1.7" }

[dev-dependencies]
insta = { version = "1.29.0", features = ["ron"] }
pretty_assertions = "1.3.0"
v8 = "0.66.0"
